@@ -49,7 +49,7 @@ MongoReply.prototype.parseBody = function(binary_reply, bson, raw, callback) {
     var overflow = 0;
     
     // Just walk down until we get a positive number >= 1
-    for(var i = 50; i > 0; i--) {
+    for(var i = 1; i > 0; i--) {
       if((this.numberReturned/i) >= 1) {
         batchSize = i;
         batches = Math.floor(this.numberReturned/i);
